<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddItemFragment">


    <EditText
        android:id="@+id/titleTextInput"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="66dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="66dp"
        android:layout_marginBottom="36dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/title"
        app:layout_constraintBottom_toTopOf="@+id/descTextInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/descTextInput"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="62dp"
        android:layout_marginEnd="62dp"
        android:layout_marginBottom="31dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/description"
        app:layout_constraintBottom_toTopOf="@+id/addOneItem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTextInput" />

    <Button
        android:id="@+id/addOneItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginBottom="363dp"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/descTextInput"
        app:layout_constraintTop_toBottomOf="@+id/descTextInput" />
</androidx.constraintlayout.widget.ConstraintLayout>